--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <script src="jquery-3.2.1.js"></script>
     <script src="mustache.js"></script>
     <script src="index.js"></script>
-    <style type="text/css">
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body id="target" onload="loadApp();">
 
